--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">game_live_data</string>
+    <string name="app_name">Simple game with Live Data</string>
 </resources>
